# xWindow

./: .clang-format  .gitignore  1.c  2.c  3.c  32_BallSweets  32_BallSweets.c  3d3.0.c  4.c  5_drow_circle.c  CMakeLists.txt  a.c  a.out  functions.c  main  main.c  nishigori.c  sakamoto.c  test.c  xWindow  xdraw.c  xdraw_e.c  xdraw_sin.c  xdraw_sub.c  xsin_m.c
